# RoofNow

./: .env.example  .gitignore  Dockerfile  README.md  index.html  measure.html  package-lock.json  package.json  pricing.config.example.json  pyproject.toml  quote.html  requirements.txt  vercel.json  vitest.config.ts
.github/workflows/: ci.yml
admin/: pricing.html
api/: config.py  facets.py  instant_quote.py  lead.py  measure.py  property_report.py  quote_preview.py  recover.py  suggest.py
api/admin/: login.py  pricing.py
docs/: RECOVERY_TUNING.md
docs/instant-quote/: 00_CLAUDE_START_HERE.md  01_BRAND_STRATEGY_ROOFNOW_POWERED_BY_NSR.md  02_PRODUCT_SPEC_INSTANT_ROOF_QUOTE.md  03_TECHNICAL_ARCHITECTURE.md  04_CONFIDENCE_ENGINE.md  05_PRICING_ENGINE.md  06_LANDING_PAGE_COPY.md  07_CLAUDE_BUILD_PROMPT.md  08_ZAPIER_SETUP.md
docs/phase-2-property-intelligence/: 00_CLAUDE_START_HERE.md  01_PRODUCT_SPEC_PROPERTY_INTELLIGENCE_REPORT.md  02_REPORT_JSON_SCHEMA.md  03_BACKEND_IMPLEMENTATION_PLAN.md  04_FRONTEND_REPORT_UI_SPEC.md  05_REPORT_COPY_BLOCKS.md  06_ADMIN_PRICING_DASHBOARD_NEXT.md  07_CLAUDE_BUILD_PROMPT_PHASE2.md
docs/phase-3-admin-pricing/: 00_BUILD_NOTES.md
roofwall/: __init__.py  admin_auth.py  app.py  cli.py  model.py  ratelimit.py
roofwall/api/: __init__.py  main.py
roofwall/cv/: __init__.py  geo.py  light.py  lines.py  recover.py  solar_dsm.py  synth.py
roofwall/cv/tests/: test_geo.py  test_light.py  test_lines.py  test_recover.py  test_topology.py
roofwall/measurement/: __init__.py  edges.py  engine.py  geometry.py  snapping.py
roofwall/measurement/tests/: test_areas.py  test_edges.py  test_geometry.py  test_pitch.py  test_snapping.py  test_walls.py
roofwall/property_report/: __init__.py  health.py  recommendation.py  schema.py  service.py  storm.py  summary.py
roofwall/property_report/tests/: test_property_report.py
roofwall/quote/: __init__.py  confidence.py  engine.py  estimate_confidence.py  funnel.py  lead.py  pricing.py  pricing_store.py
roofwall/quote/tests/: test_admin_auth.py  test_confidence.py  test_engine.py  test_estimate_confidence.py  test_funnel.py  test_lead.py  test_pricing.py  test_pricing_config.py  test_pricing_phase3.py
roofwall/report/: __init__.py  diagram.py  eagleview.py  pdf.py  render.py
roofwall/report/tests/: test_diagram.py  test_eagleview.py  test_render.py
roofwall/sources/: __init__.py  demo.py  facets.py  footprints.py  geocode.py  lidar.py  solar.py
roofwall/sources/tests/: test_demo.py  test_lidar.py  test_solar.py
roofwall/tests/: test_app.py  test_model.py  test_ratelimit.py
roofwall/walls/: __init__.py  height.py  openings.py
roofwall/walls/tests/: test_height.py  test_openings.py
roofwall/wireframe/: __init__.py  facets.py  graph.py  segments.py  solve.py
roofwall/wireframe/tests/: test_wireframe_cross_gable.py  test_wireframe_gable.py  test_wireframe_hip.py
scripts/: bench_scottlane.py
service/: README.md  main.py
web/: roofEdges.test.ts  roofEdges.ts
