[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "roofwall"
version = "0.1.0"
description = "Turn a property address into a contractor-grade roof + wall measurement report."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }
authors = [{ name = "New Standard Restoration" }]
dependencies = [
    # The measurement engine is pure-stdlib. `requests` powers live Solar/Geocode
    # lookups. numpy + tifffile + contourpy are the lightweight DSM-recovery stack
    # (api/recover.py): they MUST be base deps, not optional extras — Vercel's
    # Python builder installs only [project].dependencies (via uv) into the
    # serverless functions and ignores requirements.txt. ~74 MB, fits the limit.
    "requests>=2.31",
    "numpy>=1.26",
    "tifffile>=2024.1.30",
    "contourpy>=1.2",
]

[project.optional-dependencies]
# Phase 1 — Solar API report rendering
report = ["reportlab>=4.0"]
# Phase 2 — LiDAR plane-fit. numpy carries the core math; pdal/open3d are
# only needed to *read* point clouds (the EPT reader), not to fit planes.
lidar = ["numpy>=1.26", "shapely>=2.0", "pyproj>=3.6"]
lidar-io = ["pdal>=3.4", "open3d>=0.18"]
# Phase 2.5 — Solar DSM boundary recovery (recover.py + geo.py): raster -> polygons.
cv = ["numpy>=1.26", "scikit-image>=0.22", "shapely>=2.0", "rasterio>=1.3", "pyproj>=3.6"]
# Phase 2.5 (light) — Vercel-deployable DSM recovery (light.py): the same raster
# -> polygons step on a ~74 MB stack (no GDAL/scikit-image) so it fits a function.
cv-light = ["numpy>=1.26", "tifffile>=2024.1.30", "contourpy>=1.2"]
# Phase 2 — oblique-photo opening rectification. numpy does the homography;
# opencv is only needed to warp the actual image pixels.
walls = ["numpy>=1.26"]
walls-io = ["opencv-python>=4.9"]
# Phase 1 — API layer
api = ["fastapi>=0.110", "uvicorn>=0.29"]
dev = ["pytest>=8.0", "numpy>=1.26", "scikit-image>=0.22", "shapely>=2.0", "rasterio>=1.3", "pyproj>=3.6", "tifffile>=2024.1.30", "contourpy>=1.2"]

[project.scripts]
roofwall = "roofwall.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["roofwall*"]

[tool.pytest.ini_options]
testpaths = ["roofwall"]
